fix(consumption): address code-quality review findings on ledger staging
- stage() no longer counts as an attempt (attempts inserted as 0, left
  untouched on conflict); startProcessing() stays the single place
  attempts increases, restoring the intended 3-attempt retry budget.
- Broaden the watcher's staging catch to Exception so an unchecked
  DataAccessException from stage() costs only the current file instead
  of silently aborting the rest of the poll.
- Fix a dangling javadoc left over the wrong processStaged overload.
- Strengthen watcherPassesTheSameHashItRegistered to assert against an
  independently computed SHA-256 instead of only mutual agreement.
- Document the staged ledger state in architecture.md and operations.md.